tests/rt/pos/ifc/rcv.picox
let val secret = 10 raisedTo {secret}
    val pid = spawn (
                    fn () =>
                         rcvp( {}
                             , [  hn 2 => adv 2
                                , hn 4 => print 4 ]
                    ))
    val _ = 
        let pini authority 
            val _ = if secret > 0 then send (pid, 1) else () 
        in () 
    end
    
    val _ = send(pid, 2)

    val _ = send(pid, secret)
    
    val _ = adv 10
in ()
end
