tests/rt/neg/ifc/internal.picox
(* attempts to leak the value of `secret` through the internal timing leak  *)

let fun skip 0 = ()
      | skip n = skip (n - 1)

    val mainPid = self ()

    val secret = 1 raisedTo {secret}

    val _ = spawn (fn _ => let val _ =  if secret > 0 then skip 100000 else ()
                            in send (mainPid, 1)
                           end )

    val _ = spawn (fn _ => let val _ = skip 5000 in send (mainPid, 0) end )

    fun loop 0 = ()
      | loop n = let val x = rcv ({}, {secret}, authority, [ hn x => x ])
                     val _ = adv x
                     val _ = printWithLabels x
                  in loop (n - 1)
                 end
in loop 2
end
